--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -5,3 +5,4 @@
 @import url('page_profile.less');
 @import url('page_profile_settings.less');
 @import url('cheat-sheet.less');
+@import url('module_calendar.less');
