--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -444,3 +444,21 @@ ul.badge-marked {
         }
     }
 }
+.ui-autocomplete.ui-widget{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    background: #fff;
+    padding: 5px !important;
+    li.ui-menu-item{
+        padding: 5px !important;
+        border:solid 1px #fff;
+        &.ui-state-focus{
+            background: @blue_light;
+            border:solid 1px #fff;
+            margin:0;
+            font-weight: 400;
+            padding: 5px !important;
+            color:@sea;
+        }
+    }
+}
