Терапевт, основные настройки

--- a/cards/less/styles.less
+++ b/cards/less/styles.less
@@ -3,3 +3,4 @@
 @import url('mainpage.less');
 @import url('cheat-sheet.less');
 @import url('page_profile.less');
+@import url('page_profile_settings.less');
