--- a/cards/less/page_profile_settings.less
+++ b/cards/less/page_profile_settings.less
@@ -2,6 +2,7 @@ body.page-profile-settings{
     section.content{
         float: left;
         width: 62%;
+        min-height:800px;
     }
     aside.additional-menu{
         float: left;
