--- a/cards/less/styles.less
+++ b/cards/less/styles.less
@@ -4,3 +4,4 @@
 @import url('cheat-sheet.less');
 @import url('page_profile.less');
 @import url('page_profile_settings.less');
+@import url('page_text.less');
