Заготовка для сессионной комнаты

--- a/cards/less/page_text.less
+++ b/cards/less/page_text.less
@@ -1,12 +1,22 @@
 body.page-text{
 	.text-container{
+		overflow: visible;
 		margin-top: 20px;
-		min-height:800px;
 		.content-block{
+			min-height:800px;
 			h1:first-child{
 				text-align: center;
 				margin:30px 0;
 			}
+		}
+	}
+}
+body.page-session{
+	.text-container{
+		overflow: visible;
+		margin-top: 20px;
+		.content-block{
+			min-height:800px;
 		}
 	}
 }
