--- a/cards/css/styles.css
+++ b/cards/css/styles.css
@@ -2201,12 +2201,25 @@ body.page-profile-settings.consults input[type="submit"] {
 }
 /* line 2, page_text.less */
 body.page-text .text-container {
+  overflow: visible;
   margin-top: 20px;
+}
+/* line 5, page_text.less */
+body.page-text .text-container .content-block {
   min-height: 800px;
 }
-/* line 6, page_text.less */
+/* line 7, page_text.less */
 body.page-text .text-container .content-block h1:first-child {
   text-align: center;
   margin: 30px 0;
+}
+/* line 15, page_text.less */
+body.page-session .text-container {
+  overflow: visible;
+  margin-top: 20px;
+}
+/* line 18, page_text.less */
+body.page-session .text-container .content-block {
+  min-height: 800px;
 }
 /*# sourceMappingURL=styles.css.map */
