--- a/cards/less/interface.less
+++ b/cards/less/interface.less
@@ -223,7 +223,7 @@ p {
         }
     }
 }
-input[type="text"], textarea, input[type="password"]{
+input[type="text"], textarea, input[type="password"], input[type="date"], input[type="time"]{
     display: block;
     border-radius: 5px;
     border: solid 1px;
