--- a/cards/less/styles.less
+++ b/cards/less/styles.less
@@ -5,3 +5,4 @@
 @import url('page_profile.less');
 @import url('page_profile_settings.less');
 @import url('page_text.less');
+@import url('page_session.less');
