--- a/cards/less/styles.less
+++ b/cards/less/styles.less
@@ -6,3 +6,4 @@
 @import url('page_profile_settings.less');
 @import url('page_text.less');
 @import url('page_session.less');
+@import url('schedule.less');
