--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -6,3 +6,4 @@
 @import url('page_profile_settings.less');
 @import url('cheat-sheet.less');
 @import url('module_calendar.less');
+@import url('schedule.less');
