--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -2,6 +2,7 @@
 	position: relative;
 	width: 480px;
 	padding:15px;
+	float: left;
 	.hours{
 		position: relative;
 		float: left;
@@ -38,4 +39,10 @@
 			display: none;
 		}
 	}
+}
+form{
+	display: block;
+	float: left;
+	width: 250px;
+	margin:10px;
 }
