--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -10,7 +10,12 @@
 		width: 40px;
 		.hour{
 			height: 32px;
-			line-height:32px;
+			text-align: center;
+			span{
+				position: relative;
+				font-size:1.2rem;
+				top: -1px;
+			}
 		}
 	}
 	.grid{
