Подгрузка расписания с сервера. Скрипт на перекрытие (пока с недочётами)

--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -2240,7 +2240,30 @@ body.page-profile-settings.consults input[type="submit"] {
   background: rgba(0, 0, 0, 0.1);
   display: none;
 }
-/* line 48, schedule.less */
+/* line 46, schedule.less */
+.schedule-container .grid .reserved-marker {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  position: absolute;
+  width: 100%;
+  border-left: solid 5px #aaa;
+  border-right: solid 1px #aaa;
+  border-top: solid 1px #aaa;
+  border-bottom: solid 1px #aaa;
+  z-index: 1;
+  display: none;
+}
+/* line 57, schedule.less */
+.schedule-container .grid .reserved-marker.skype {
+  border-color: #33b679;
+  background: rgba(51, 152, 121, 0.4);
+}
+/* line 61, schedule.less */
+.schedule-container .grid .reserved-marker.private {
+  border-color: #fac944;
+  background: rgba(250, 201, 68, 0.4);
+}
+/* line 68, schedule.less */
 form {
   display: block;
   float: left;
