--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -54,13 +54,25 @@
 			border-bottom: solid 1px #aaa;
 			z-index: 1;
 			display: none;
+			p{
+				font-size:1.3rem;
+				display: block;
+				margin-left: 20px;
+				margin-top: 6px;
+			}
 			&.skype{
 				border-color:#33b679;
 				background: rgba(51,152,121,.4);
+				p{
+					color:#33b679 - #222;
+				}
 			}
 			&.private{
 				border-color:#fac944;
 				background: rgba(250,201,68,.4);
+				p{
+					color:#d39a00;
+				}
 			}
 		}
 	}
